# offboard

./: CMakeLists.txt  README.md  package.xml
cfg/: circle_r1m.csv  uav.yaml
include/controller/: commonUsage.h  pid.h  rosRelated.h
launch/: attctl_TAL.launch  attctl_circle.launch  attctl_traj.launch  controller.launch  filter_test.launch  posctl_circle.launch
msg/: DebugPid.msg  PosVelAcc.msg
scripts/: bag_cut.py  calibrate.ipynb  calibrate.py
sh/: recordbag.sh  testConnection.sh
src/: attctl_circle.cpp  attctl_perching.cpp  attctl_traj.cpp  controller_node.cpp  filter_test.cpp  posctl_circle.cpp  posctl_hover.cpp  takeoff_landing.cpp
